@@ -152,6 +152,30 @@ set_power_changed_cb (GtkWidget *w, XfconfChannel *channel)
 }
 
 static void
+set_hibernate_changed_cb (GtkWidget *w, XfconfChannel *channel)
+{
+    GtkTreeModel     *model;
+    GtkTreeIter       selected_row;
+    gint value = 0;
+    
+    if (!gtk_combo_box_get_active_iter (GTK_COMBO_BOX (w), &selected_row))
+	return;
+	
+    model = gtk_combo_box_get_model (GTK_COMBO_BOX(w));
+   
+    gtk_tree_model_get(model,
+                       &selected_row,
+                       1,
+                       &value,
+                       -1);
+    
+    if (!xfconf_channel_set_string (channel, HIBERNATE_SWITCH_CFG, xfpm_int_to_shutdown_string(value) ) )
+    {
+	g_critical ("Cannot set value for property %s\n", HIBERNATE_SWITCH_CFG);
+    }
+}
+
+static void
 power_save_toggled_cb (GtkWidget *w, XfconfChannel *channel)
 {
     gboolean val = gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON(w));
@@ -812,6 +836,9 @@ xfpm_settings_general (XfconfChannel *channel, gboolean user_privilege,
     gtk_list_store_append (list_store, &iter);
     gtk_list_store_set (list_store, &iter, 0, _("Shutdown"), 1, 3, -1);
     
+     gtk_list_store_append (list_store, &iter);
+    gtk_list_store_set (list_store, &iter, 0, _("Ask"), 1, 4, -1);
+    
     g_signal_connect (power, "changed",
 		      G_CALLBACK(set_power_changed_cb), channel);
     
@@ -838,6 +865,64 @@ xfpm_settings_general (XfconfChannel *channel, gboolean user_privilege,
     }
 
     g_free (default_power_value);
+    
+    /*
+     * Hibernate button
+     */
+    list_store = gtk_list_store_new (2, G_TYPE_STRING, G_TYPE_INT);
+    GtkWidget *hibernate = glade_xml_get_widget (xml, "hibernate-combox");
+    if (!user_privilege )
+    {
+	gtk_widget_set_sensitive (hibernate, FALSE);
+	gtk_widget_set_tooltip_text (hibernate, _("Hibernate and suspend operations not permitted"));
+    }
+    
+    gtk_combo_box_set_model (GTK_COMBO_BOX(hibernate), GTK_TREE_MODEL(list_store));
+
+    gtk_list_store_append (list_store, &iter);
+    gtk_list_store_set (list_store, &iter, 0, _("Nothing"), 1, 0, -1);
+    
+    if ( can_suspend )
+    {
+	gtk_list_store_append (list_store, &iter);
+	gtk_list_store_set (list_store, &iter, 0, _("Suspend"), 1, 1, -1);
+    }
+    
+    if ( can_hibernate )
+    {
+	gtk_list_store_append (list_store, &iter);
+	gtk_list_store_set (list_store, &iter, 0, _("Hibernate"), 1, 2, -1);
+    }
+    
+    gtk_list_store_append (list_store, &iter);
+    gtk_list_store_set (list_store, &iter, 0, _("Ask"), 1, 4, -1);
+    
+    g_signal_connect (hibernate, "changed",
+		      G_CALLBACK(set_hibernate_changed_cb), channel);
+    
+    gchar *default_hibernate_value = xfconf_channel_get_string (channel, HIBERNATE_SWITCH_CFG, "Nothing");
+    gint   hibernate_val_int = xfpm_shutdown_string_to_int (default_hibernate_value );
+    
+    if ( G_UNLIKELY (hibernate_val_int == -1) ) 
+    {
+	g_warning ("Invalid value %s for property %s\n", default_hibernate_value, POWER_SWITCH_CFG);
+	hibernate_val_int = 0;
+    }
+    for ( valid = gtk_tree_model_get_iter_first (GTK_TREE_MODEL (list_store), &iter);
+	      valid;
+	      valid = gtk_tree_model_iter_next (GTK_TREE_MODEL (list_store), &iter) )
+    {
+	gint list_value;
+	gtk_tree_model_get (GTK_TREE_MODEL (list_store), &iter,
+				1, &list_value, -1);
+	if ( hibernate_val_int == list_value )
+	{
+	    gtk_combo_box_set_active_iter (GTK_COMBO_BOX (hibernate), &iter);
+	    break;
+	}
+    }
+
+    g_free (default_hibernate_value);
     
 
     /*
@@ -867,6 +952,10 @@ xfpm_settings_general (XfconfChannel *channel, gboolean user_privilege,
 	gtk_list_store_append (list_store, &iter);
 	gtk_list_store_set (list_store, &iter, 0, _("Hibernate"), 1, 2, -1);
     }
+    
+     gtk_list_store_append (list_store, &iter);
+    gtk_list_store_set (list_store, &iter, 0, _("Ask"), 1, 4, -1);
+    
     g_signal_connect (sleep, "changed",
 		      G_CALLBACK(set_sleep_changed_cb), channel);
     
