@@ -57,7 +57,7 @@
                                     <child>
                                       <widget class="GtkTable" id="table3">
                                         <property name="visible">True</property>
-                                        <property name="n_rows">3</property>
+                                        <property name="n_rows">4</property>
                                         <property name="n_columns">2</property>
                                         <property name="column_spacing">10</property>
                                         <property name="row_spacing">10</property>
@@ -139,9 +139,9 @@
                                           <widget class="GtkHBox" id="hbox3">
                                             <property name="visible">True</property>
                                             <child>
-                                              <widget class="GtkLabel" id="label3">
+                                              <widget class="GtkLabel" id="label4">
                                                 <property name="visible">True</property>
-                                                <property name="label" translatable="yes">When sleep button is pressed:</property>
+                                                <property name="label" translatable="yes">When hibernate button is pressed:</property>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
@@ -158,7 +158,7 @@
                                           <widget class="GtkHBox" id="hbox4">
                                             <property name="visible">True</property>
                                             <child>
-                                              <widget class="GtkComboBox" id="sleep-combox">
+                                              <widget class="GtkComboBox" id="hibernate-combox">
                                                 <property name="visible">True</property>
                                                 <property name="items" translatable="yes">Nothing</property>
                                               </widget>
@@ -173,6 +173,46 @@
                                             <property name="right_attach">2</property>
                                             <property name="top_attach">2</property>
                                             <property name="bottom_attach">3</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkHBox" id="hbox5">
+                                            <property name="visible">True</property>
+                                            <child>
+                                              <widget class="GtkLabel" id="label3">
+                                                <property name="visible">True</property>
+                                                <property name="label" translatable="yes">When sleep button is pressed:</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                          </widget>
+                                          <packing>
+                                            <property name="top_attach">3</property>
+                                            <property name="bottom_attach">4</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkHBox" id="hbox6">
+                                            <property name="visible">True</property>
+                                            <child>
+                                              <widget class="GtkComboBox" id="sleep-combox">
+                                                <property name="visible">True</property>
+                                                <property name="items" translatable="yes">Nothing</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                          </widget>
+                                          <packing>
+                                            <property name="left_attach">1</property>
+                                            <property name="right_attach">2</property>
+                                            <property name="top_attach">3</property>
+                                            <property name="bottom_attach">4</property>
                                           </packing>
                                         </child>
                                       </widget>
@@ -982,7 +1022,7 @@
             <property name="visible">True</property>
             <child>
               <widget class="GtkButton" id="help-button">
-                <property name="label" translatable="no">gtk-help</property>
+                <property name="label">gtk-help</property>
                 <property name="response_id">-11</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -997,7 +1037,7 @@
             </child>
             <child>
               <widget class="GtkButton" id="close-button">
-                <property name="label" translatable="no">gtk-close</property>
+                <property name="label">gtk-close</property>
                 <property name="response_id">-7</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
