@@ -71,6 +71,8 @@ void                      xfpm_hibernate                (XfpmShutdown *shutdown,
 void                      xfpm_suspend                  (XfpmShutdown *shutdown,
 							 GError **error);
 
+void                      xfpm_shutdown_ask             (XfpmShutdown *shutdown);
+
 void			  xfpm_shutdown_reload          (XfpmShutdown *shutdown);
 
 G_END_DECLS
