@@ -1,4 +1,7 @@
 
+2009-04-10 21:29 Ali aliov@xfce.org 
+	 * : Added handler for power button+added option to ask the session manager to its show the exit dialog
+
 2009-04-10 19:53 Ali aliov@xfce.org 
 	 * : Change the session restart style to if running when we are exiting
 
